[gd_scene load_steps=7 format=3 uid="uid://beq256g2rwuc6"]

[ext_resource type="FontFile" uid="uid://b01bb8eqxd1x" path="res://Fonts/PressStart2P-Regular.ttf" id="1_ek0wk"]
[ext_resource type="Script" path="res://Scenes/MainMenu/MainMenu.gd" id="1_h6b0h"]
[ext_resource type="Script" path="res://Scenes/MainMenu/TextButton.gd" id="2_rai7d"]

[sub_resource type="Animation" id="Animation_ruhax"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:theme_override_font_sizes/font_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_udevw"]
resource_name = "ScaleLoop"
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:theme_override_font_sizes/font_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"points": PackedFloat32Array(15, -0.241298, -42.0661, 0.0860423, 15, 1, 34, -0.0795029, 0, 0.0832667, 0, 1, 15, -0.089617, 15, 0.194686, -32.5864, 1),
"times": PackedFloat32Array(0, 0.506539, 1)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lt0vl"]
_data = {
"RESET": SubResource("Animation_ruhax"),
"ScaleLoop": SubResource("Animation_udevw")
}

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_h6b0h")

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
offset_left = 92.0
offset_top = 100.0
offset_right = 932.0
offset_bottom = 500.0

[node name="GameName" type="Label" parent="CenterContainer/VBoxContainer"]
offset_right = 840.0
offset_bottom = 126.0
theme_override_colors/font_color = Color(0.211765, 0.729412, 0.733333, 1)
theme_override_fonts/font = ExtResource("1_ek0wk")
theme_override_font_sizes/font_size = 60
text = "Slice and dice
 "
horizontal_alignment = 1

[node name="By" type="Label" parent="CenterContainer/VBoxContainer"]
offset_top = 130.0
offset_right = 840.0
offset_bottom = 184.0
theme_override_fonts/font = ExtResource("1_ek0wk")
theme_override_font_sizes/font_size = 15
text = "A Game

By: Dani Frank, Lotem Amiel, OmerGan"
horizontal_alignment = 1

[node name="space" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
offset_top = 188.0
offset_right = 840.0
offset_bottom = 238.0

[node name="Control" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
offset_top = 242.0
offset_right = 840.0
offset_bottom = 292.0
script = ExtResource("2_rai7d")

[node name="StartGame" type="Label" parent="CenterContainer/VBoxContainer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_fonts/font = ExtResource("1_ek0wk")
theme_override_font_sizes/font_size = 0
text = "START GAME"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="CenterContainer/VBoxContainer/Control/StartGame"]
libraries = {
"": SubResource("AnimationLibrary_lt0vl")
}

[node name="Control3" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
offset_top = 296.0
offset_right = 840.0
offset_bottom = 346.0
script = ExtResource("2_rai7d")

[node name="StartGame" type="Label" parent="CenterContainer/VBoxContainer/Control3"]
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_fonts/font = ExtResource("1_ek0wk")
theme_override_font_sizes/font_size = 0
text = "ABOUT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="CenterContainer/VBoxContainer/Control3/StartGame"]
libraries = {
"": SubResource("AnimationLibrary_lt0vl")
}

[node name="Control4" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
offset_top = 350.0
offset_right = 840.0
offset_bottom = 400.0
script = ExtResource("2_rai7d")

[node name="StartGame" type="Label" parent="CenterContainer/VBoxContainer/Control4"]
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_fonts/font = ExtResource("1_ek0wk")
theme_override_font_sizes/font_size = 0
text = "EXIT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="CenterContainer/VBoxContainer/Control4/StartGame"]
libraries = {
"": SubResource("AnimationLibrary_lt0vl")
}

[connection signal="gui_input" from="CenterContainer/VBoxContainer/Control" to="." method="_on_startgame_gui_input"]
[connection signal="gui_input" from="CenterContainer/VBoxContainer/Control3" to="." method="_on_about_gui_input"]
[connection signal="gui_input" from="CenterContainer/VBoxContainer/Control4" to="." method="_on_exit_gui_input"]
